k8s/ocr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: winpost-ocr
  labels:
    app: winpost-ocr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: winpost-ocr
  template:
    metadata:
      labels:
        app: winpost-ocr
    spec:
      containers:
        - name: ocr
          image: ghcr.io/naganuma-tsutomu/winpost-ocr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "1Gi"
            limits:
              memory: "4Gi"
          volumeMounts:
            # /root/.EasyOCR にモデルがダウンロードされる仕様
            - mountPath: /root/.EasyOCR
              name: model-cache
      volumes:
        - name: model-cache
          persistentVolumeClaim:
            claimName: ocr-model-cache-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: winpost-ocr-service
spec:
  selector:
    app: winpost-ocr
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
